--- a/templates/dishes/restaurant_list.html
+++ b/templates/dishes/restaurant_list.html
@@ -16,11 +16,11 @@
         <div class="col-md-4 text-end">
             {% if user_location %}
                 <a href="{% url 'dishes:nearby_restaurants' %}" class="btn btn-primary">
-                    <i class="fas fa-map-marker-alt" style="color: #FFFFFF; font-size: 1rem; margin-right: 0.25rem;"></i> View Nearby
+                    View Nearby
                 </a>
             {% else %}
                 <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#locationModal">
-                    <i class="fas fa-map-marker-alt" style="color: #FFFFFF; font-size: 1rem; margin-right: 0.25rem;"></i> Set Location
+                    Set Location
                 </button>
             {% endif %}
         </div>
